--- a/cv.html
+++ b/cv.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!-- Webpage of Juan Carlos Ruiz-García https://http://jcruizgarcia.com/ -->
+<!-- Webpage of Juan Carlos Ruiz-Garcia https://http://jcruizgarcia.com/ -->
 <html lang="en">
 <head>
-<title>JC Ruiz-García &#8210 CV</title>    
+<title>JC Ruiz-Garcia &#8210 CV</title>    
 <meta charset = "UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="Juan Carlos Ruiz-García">
@@ -79,7 +79,7 @@ body{
     .headers p {  
         text-align: center;
         font-size: 175%;
-        line-height: 130%;
+        line-height: 150%;
         font-weight: 100;
         color: #666666;
         margin: auto; 
@@ -407,7 +407,7 @@ body{
         <div class = "headerb">
             <div class="wrapperh">
                 <div class="hleft">
-                    <h1><a style="text-decoration: none; font-weight: 100; color: #3b5198;" href="home.html">Juan Carlos Ruiz-García</a></h1> 
+                    <h1><a style="text-decoration: none; font-weight: 100; color: #3b5198;" href="home.html">Juan Carlos Ruiz-Garcia</a></h1> 
                 </div>            
                 <div class="hright2"> 
                     <div class="navbarb">
@@ -424,10 +424,10 @@ body{
         <div class = "headers">
             <div class="wrapperh">
                 <div class="hleft">
-                    <h1><a style="text-decoration: none; font-weight: 100; color: #3b5198;" href="home.html">Juan Carlos Ruiz-García</a></h1> 
-                    <h2 style="padding-top: 5%;"> <a style="padding-top: 5%; text-decoration: none;" href="http://www.cam.ac.uk/" target="_blank">University of Cambridge</a></h2>
-                    <p style="padding-top: 2%;">Sidgwick Avenue - Austin Robinson Building<br>CB3 9DD Cambridge - UK</p>
-                    <p style="padding-top: 3%; font-size: 225%;"><a style="padding-top: 5%; text-decoration: none;" href="mailto:jcrg3@cam.ac.uk">jcrg3@cam.ac.uk</a></p>
+                    <h1><a style="text-decoration: none; font-weight: 100; color: #3b5198;" href="home.html">Juan Carlos Ruiz-Garcia</a></h1> 
+                    <h2 style="padding-top: 5%;"> <a style="padding-top: 5%; text-decoration: none;" href="http://www.uib.es/" target="_blank">Universitat de les Illes Balears</a></h2>
+                    <p style="padding-top: 2%;">Cra. de Valldemossa, km 7.5<br>G.M. de Jovellanos Building &#8211 Office DB245<br>07122 Palma &#8211 Illes Balears &#8211 Spain</p>
+                    <p style="padding-top: 0%; font-size: 225%;"><a style="padding-top: 5%; text-decoration: none;" href="mailto:ruizgarcia.juancar@gmail.com">ruizgarcia.juancar@gmail.com</a></p>
                 </div>
                 <div class="hright1"> 
                     <img src="files/photo2.jpg" alt="centered image" height="auto" width="100%">                     
@@ -452,7 +452,7 @@ body{
         <div class = "wrapperb" style="padding-bottom: 0%;">      
             <h3 style="padding-top: 5%;">EMPLOYMENT</h3>
                 <ul style="color: #666666" >
-                    <li><p style="padding-top: 1%;">Tenure track Research Associate, <a style="text-decoration: none; font-weight: bold;" href="http://www.international.unina.it/" target="_blank">University of Naples Federico II</a> and <a style="text-decoration: none; font-weight: bold;" href="http://www.csef.it/" target="_blank">Center for Studies in Economics and Finance (CSEF)</a> &#8210 2021/Present</p></li> 
+                    <li><p style="padding-top: 1%;">Visiting Research Associate, <a style="text-decoration: none; font-weight: bold;" href="http://www.uib.es/" target="_blank">Universitat de les Illes Balears (UIB)</a> &#8210 2021/Present</p></li> 
                     <li><p style="padding-top: 1%;"><a style="text-decoration: none; font-weight: bold;" href="http://www.inet.econ.cam.ac.uk/" target="_blank">Cambridge-INET Institute</a> Research Associate, <a style="text-decoration: none; font-weight: bold;" href="http://www.cam.ac.uk/" target="_blank">University of Cambridge</a> &#8210 2020/21</p></li>
                 </ul> 
         </div>   
@@ -461,7 +461,7 @@ body{
                 <ul style="color: #666666" >
                     <li><p style="padding-top: 1%;">PhD. in Economics and Government &#8210 <a style="text-decoration: none; font-weight: bold;" href="http://www.cemfi.es/" target="_blank">Center for Monetary and Financial Studies (CEMFI)</a></p></li>
                     <li><p style="padding-top: 1%;">MPhil. in Economics and Finance &#8210 <a style="text-decoration: none; font-weight: bold;" href="http://www.cemfi.es/" target="_blank">CEMFI</a></p></li>
-                    <li><p style="padding-top: 1%;">BA. in Economics (with Honours) &#8210 <a style="text-decoration: none; font-weight: bold;" href="http://www.uib.es/es/" target="_blank">Universitat de les Illes Balears (UIB)</a></p></li>
+                    <li><p style="padding-top: 1%;">BA. in Economics (with Honours) &#8210 <a style="text-decoration: none; font-weight: bold;" href="http://www.uib.es/es/" target="_blank">UIB</a></p></li>
                 </ul> 
         </div>   
         <div class = "wrapperb">     
@@ -482,7 +482,7 @@ body{
         <div class = "wrappers" style="padding-top: 0%; padding-bottom: 0%;">    
             <h3 style="padding-top: 5%;">EMPLOYMENT</h3>
                 <ul style="color: #666666" >
-                    <li><p style="padding-top: 0.75%;">Tenure track Research Associate, <a style="text-decoration: none; font-weight: bold;" href="http://www.international.unina.it/" target="_blank">University of Naples Federico II</a> and <a style="text-decoration: none; font-weight: bold;" href="http://www.csef.it/" target="_blank">Center for Studies in Economics and Finance (CSEF)</a> &#8210 2021/Present</p></li> 
+                    <li><p style="padding-top: 1%;">Visiting Research Associate, <a style="text-decoration: none; font-weight: bold;" href="http://www.uib.es/" target="_blank">Universitat de les Illes Balears (UIB)</a> &#8210 2021/Present</p></li> 
                     <li><p style="padding-top: 0.75%;"><a style="text-decoration: none; font-weight: bold;" href="http://www.inet.econ.cam.ac.uk/" target="_blank">Cambridge-INET Institute</a> Research Associate, <a style="text-decoration: none; font-weight: bold;" href="http://www.cam.ac.uk/" target="_blank">University of Cambridge</a> &#8210 2020/21</p></li>
                 </ul> 
         </div>     
@@ -491,7 +491,7 @@ body{
                 <ul style="color: #666666" >
                     <li><p style="padding-top: 0.75%;">PhD. Cadidate in Economics &#8210 <a style="text-decoration: none; font-weight: bold;" href="http://www.cemfi.es/" target="_blank">Center for Monetary and Financial Studies (CEMFI)</a></p></li>
                     <li><p style="padding-top: 0.75%;">MPhil. in Economics and Finance &#8210 <a style="text-decoration: none; font-weight: bold;" href="http://www.cemfi.es/" target="_blank">CEMFI</a></p></li>
-                    <li><p style="padding-top: 0.75%;">BA. in Economics (with Honours) &#8210 <a style="text-decoration: none; font-weight: bold;" href="http://www.uib.es/es/" target="_blank">Universitat de les Illes Balears (UIB)</a></p></li>
+                    <li><p style="padding-top: 0.75%;">BA. in Economics (with Honours) &#8210 <a style="text-decoration: none; font-weight: bold;" href="http://www.uib.es/es/" target="_blank">UIB</a></p></li>
                 </ul>
         </div>     
         <div class = "wrappers" style="padding-top: 0%;">    
