--- a/references.html
+++ b/references.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<!-- Webpage of Juan Carlos Ruiz-García https://http://jcruizgarcia.com/ -->
+<!-- Webpage of Juan Carlos Ruiz-Garcia https://http://jcruizgarcia.com/ -->
 <html lang="en">
 <head>
 <title>JC Ruiz-García &#8210 References</title>    
 <meta charset = "UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="author" content="Juan Carlos Ruiz-García">
+<meta name="author" content="Juan Carlos Ruiz-Garcia">
     
-<!-- <meta name="description" content="Personal website of Juan Carlos Ruiz-García, PhD candidate in Economics - CEMFI"> -->
+<!-- <meta name="description" content="Personal website of Juan Carlos Ruiz-Garcia, PhD candidate in Economics - CEMFI"> -->
     
 <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 <link rel="icon" href="files/favicon.ico" type="image/gif" sizes="16x16">  
@@ -79,7 +79,7 @@ body{
     .headers p {  
         text-align: center;
         font-size: 175%;
-        line-height: 130%;
+        line-height: 150%;
         font-weight: 100;
         color: #666666;
         margin: auto; 
@@ -451,7 +451,7 @@ body{
         <div class = "headerb">
             <div class="wrapperh">
                 <div class="hleft">
-                    <h1><a style="text-decoration: none; font-weight: 100; color: #3b5198;" href="home.html">Juan Carlos Ruiz-García</a></h1> 
+                    <h1><a style="text-decoration: none; font-weight: 100; color: #3b5198;" href="home.html">Juan Carlos Ruiz-Garcia</a></h1> 
                 </div>            
                 <div class="hright2"> 
                     <div class="navbarb">
@@ -465,13 +465,13 @@ body{
             </div> 
         </div>
         <!-- Header Small Screen (less 900px) -->
-        <div class = "headers">
+         <div class = "headers">
             <div class="wrapperh">
                 <div class="hleft">
-                    <h1><a style="text-decoration: none; font-weight: 100; color: #3b5198;" href="home.html">Juan Carlos Ruiz-García</a></h1> 
-                    <h2 style="padding-top: 5%;"> <a style="padding-top: 5%; text-decoration: none;" href="http://www.cam.ac.uk/" target="_blank">University of Cambridge</a></h2>
-                    <p style="padding-top: 2%;">Sidgwick Avenue - Austin Robinson Building<br>CB3 9DD Cambridge - UK</p>
-                    <p style="padding-top: 3%; font-size: 225%;"><a style="padding-top: 5%; text-decoration: none;" href="mailto:jcrg3@cam.ac.uk">jcrg3@cam.ac.uk</a></p>
+                    <h1><a style="text-decoration: none; font-weight: 100; color: #3b5198;" href="home.html">Juan Carlos Ruiz-Garcia</a></h1> 
+                    <h2 style="padding-top: 5%;"> <a style="padding-top: 5%; text-decoration: none;" href="http://www.uib.es/" target="_blank">Universitat de les Illes Balears</a></h2>
+                    <p style="padding-top: 2%;">Cra. de Valldemossa, km 7.5<br>G.M. de Jovellanos Building &#8211 Office DB245<br>07122 Palma &#8211 Illes Balears &#8211 Spain</p>
+                    <p style="padding-top: 0%; font-size: 225%;"><a style="padding-top: 5%; text-decoration: none;" href="mailto:ruizgarcia.juancar@gmail.com">ruizgarcia.juancar@gmail.com</a></p>
                 </div>
                 <div class="hright1"> 
                     <img src="files/photo2.jpg" alt="centered image" height="auto" width="100%">                     
@@ -486,7 +486,7 @@ body{
                     </div>                    
                 </div>
             </div> 
-        </div>        
+        </div>             
 
         <!-- Main Body - Large Screen (more 900px) --> 
         <div class = "wrapperb" style="padding-bottom: 0%;"> 
