--- a/research.html
+++ b/research.html
@@ -474,7 +474,7 @@ body{
             <p style="padding-top: 1%; font-size: 100%;"><b>JEL Codes:</b> E22, G32, O16</p>
             <p style="padding-top: 0.5%; font-size: 100%;"><b>Keywords:</b> Firm Dynamics, Non-Linear Productivity Process, Financial Frictions, Misallocation</p>
             
-            <h3 style="padding-top: 3%; text-align: center;"><a style="text-decoration: none" href="files/FGGGS_NLPandID.pdf" target="_blank">Non-Linear TFP and Investment Dynamics</a></h3>     
+            <h3 style="padding-top: 3%; text-align: center;"><a style="text-decoration: none" href="files/FGGGS_NLPandID.pdf" target="_blank">Non-Linear Productivity and Investment Dynamics</a></h3>     
             <p style="padding-top: 0.50%; text-align: center; color: #3b5198; font-size: 125%;">Preliminary</p>  
             <p style="padding-top: 0.25%; text-align: center; color: #666666; font-size: 100%;">with <a style="text-decoration: none;" href="https://giuliofella.net/" target="_blank">Giulio Fella &#8210 QMUL</a>, <a style="text-decoration: none;" href="https://sites.google.com/view/juliogalvezresearch/" target="_blank">Julio Gálvez &#8210 BdE</a>, <a style="text-decoration: none;" href="https://beatrizgonzalezlopez.weebly.com/" target="_blank">Beatriz González &#8210 BdE</a> and <a style="text-decoration: none;" href="http://tatsuro-senga.net/index.html" target="_blank">Tatsuro Senga &#8210 QMUL</a>
             </p>            
@@ -514,7 +514,7 @@ body{
             <p style="padding-top: 1%; font-size: 175%;"><b>JEL Codes:</b> E22, G32, O16</p>
             <p style="padding-top: 0.5%; font-size: 175%;"><b>Keywords:</b> Firm Dynamics, Non-Linear Productivity Process, Financial Frictions, Misallocation</p>
             
-            <h3 style="padding-top: 2%; text-align: center;"><a style="text-decoration: none" href="files/FGGGS_NLPandID.pdf" target="_blank">Non-Linear TFP and Investment Dynamics</a></h3>     
+            <h3 style="padding-top: 2%; text-align: center;"><a style="text-decoration: none" href="files/FGGGS_NLPandID.pdf" target="_blank">Non-Linear Productivity and Investment Dynamics</a></h3>     
             <p style="padding-top: 0.50%; text-align: center; color: #3b5198; font-size: 200%;">Preliminary</p>  
             <p style="padding-top: 0.25%; text-align: center; color: #666666; font-size: 175%;">with <a style="text-decoration: none;" href="https://giuliofella.net/" target="_blank">Giulio Fella &#8210 QMUL</a>, <a style="text-decoration: none;" href="https://sites.google.com/view/juliogalvezresearch/" target="_blank">Julio Gálvez &#8210 BdE</a>, <a style="text-decoration: none;" href="https://beatrizgonzalezlopez.weebly.com/" target="_blank">Beatriz González &#8210 BdE</a> and <a style="text-decoration: none;" href="http://tatsuro-senga.net/index.html" target="_blank">Tatsuro Senga &#8210 QMUL</a>
             </p>            
